Fixed the issue I was having with memory by adding some settings to build.sbt