@@ -2,6 +2,14 @@ name := "storagexchange"
 
 version := "1.0-SNAPSHOT"
 
+parallelExecution in Test := true
+
+Keys.fork := false
+
+javaOptions in Test += "-Xmx4G"
+
+javaOptions in Test += "-XX:MaxPermSize=1024M"
+
 libraryDependencies ++= Seq(
   // Add your project dependencies here,
   jdbc,
